- added ResizebarBack and added appropriate backwards compat. hacks in setstyle
- applied ]d's patch to allow DEMATERIALIZE_ICON over windows
- made clip arrows gradiented
- added a crashing dialog panel to select what to do on crashes.
- fixed the problem with showing a window as focused in the window list menu
  while it was on another workspace.


Changes since version 0.51.2:
.............................

- made the Attributes panel be available for all windows, even
  for completely broken apps (although settings wont be saved for
  completely broken apps)
- fixed compilation problems with compile time #defines
- workaround for crash during startup related to hiding miniaturized windows
  from Matt Armstrong <matt_armstrong@bigfoot.com>
- fixed focus problem with unfocusable windows
- fixed bug in WPrefs that changed EXIT to SHUTDOWN
- fixed menu title messup bug in WPrefs
- added a dot to mark hidden applications (compile time) (id@windowmaker.org)
- enhancements to the modelock patch (id@windowmaker.org)
- show kbd mode for modelock  (id@windowmaker.org)
- enhanced positioning of transient windows
- added dynamically loadable texture renderer code
  from Tobias Gloth <gloth@online.de>
- added DisableMiniwindows option
- kde: miniaturize animation will match the taskbar icon (KWM_WIN_ICON_GEOMETRY)
- miniwindows show the title of the window if there is none set for it
- fixed crash on kpanel restart
- remember window shortcuts after restart
- change edge resistance to account for panels and stuffs
- narrower menus
- fixed auto raise/lower behaviour of clip for docked applications that have
  their own window (applets).
- cleaned up Clip's autocollapsing code, and made it to be similar to the
  auto raise/lower code (much cleaner).
- fixed a race condition in Clip behavior when changing workspaces, if set to
  autocollapsing.


Changes since version 0.51.1:
.............................

- fixed bug with window that can get focus if both shaded and hidden.