@@ -469,6 +469,7 @@ static void
 handleActionEvents(XEvent *event, void *data)
 {
     WMSlider *sPtr = (Slider*)data;
+    int ovalue = sPtr->value;
 
     CHECK_CLASS(data, WC_Slider);
 
@@ -511,7 +512,7 @@ handleActionEvents(XEvent *event, void *data)
 	break;
 
      case ButtonRelease:
-	if (!sPtr->flags.continuous && sPtr->flags.dragging && sPtr->action) {
+	if (!sPtr->flags.continuous && ovalue != sPtr->value && sPtr->action) {
 	    (*sPtr->action)(sPtr, sPtr->clientData);
 	}
 	sPtr->flags.dragging = 0;
